--- a/assets/css/scss/components/_base.scss
+++ b/assets/css/scss/components/_base.scss
@@ -42,6 +42,61 @@ a{
                 color: #ec7451;
                 text-transform: none;
                 line-height: normal;
+                &:hover{
+                    color: #1f274a;
+                    text-decoration: underline;
+                }
             }
         }
     }
+
+
+    .slick__arrow{
+        position: absolute;
+        width: 36px;
+        height: 36px;
+        z-index: 2;
+        background-color:#fff;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        box-shadow: 0 4px 10px hsl(252deg 3% 69% / 28%);
+        outline: none;
+        color: #000;
+        top: 50%;
+        transform: translateY(-50%);
+        &.slick__prev{
+            left: 16px;
+            right: auto;
+        }
+        &.slick__next{
+            left: auto;
+            right: 16px;
+        }
+    } 
+
+    .slick-arrow{
+        position: absolute;
+        width: 36px;
+        height: 36px;
+        z-index: 2;
+        background-color:#fff;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        box-shadow: 0 4px 10px hsl(252deg 3% 69% / 28%);
+        outline: none;
+        color: #000;
+        top: 50%;
+        transform: translateY(-50%);
+        &.slick-prev{
+            left: -20px;
+        }
+        &.slick-next{
+            right: -20px;
+        }
+    }
+    // .button-wrapper{
+    //     a:hover{
+    //       background: transparent;
+    //       border: 1px solid #ec7451;  
+    //     }
+    // }
