--- a/assets/css/scss/includes/_cuisines.scss
+++ b/assets/css/scss/includes/_cuisines.scss
@@ -1,91 +1,77 @@
 .cuisines{
     margin-bottom: 30px;
     .container{
-        .cuisine-slider{
-            // width: 100%;
-            // display: flex;
-            // flex-wrap: wrap;
-            .slick-arrow{
-                position: absolute;
-                width: 36px;
-                height: 36px;
-                z-index: 2;
-                background-color:#fff;
-                border: 1px solid #fff;
-                border-radius: 4px;
-                box-shadow: 0 4px 10px hsl(252deg 3% 69% / 28%);
-                outline: none;
-                color: #000;
-                top: 50%;
-                transform: translateY(-50%);
-                &.slick-prev{
-                    left: -16px;
-                }
-                &.slick-next{
-                    right: -16px;
-                }
+        .cuisine-slider-wrapper{
+            position: relative;
+            .slick__prev{
+                left: -20px;
             }
-            .cuisines-slide{ 
-                width: 100%;
-                // margin-right: 20px;
-                display: block;
-                .slick-list{
-                margin: 0 -10px;
-
-                }
-                .cuisine-card{
-                    display: flex;
-                    align-items: center;
-                    background-color: #fff;
-                    width: 212px;
+            .slick__next{
+                right: -20px;
+            }
+            .cuisine-slider{
+                .cuisines-slide{ 
+                    width: 100%;
                     // margin-right: 20px;
-                    padding: 5px;
-                    border-radius: 9px;
-                    overflow: hidden;
                     display: block;
-                    margin: 0 10px;
-                    .card-content{
-                        position: relative;
-                        overflow: hidden;
+                    .slick-list{
+                    margin: 0 -10px;
+    
+                    }
+                    .cuisine-card{
+                        display: flex;
+                        align-items: center;
+                        background-color: #fff;
+                        width: 212px;
+                        // margin-right: 20px;
+                        padding: 5px;
                         border-radius: 9px;
-                        width: 100%;
-                        height: 100%;
-                        img{
-                            display: block;
+                        overflow: hidden;
+                        display: block;
+                        margin: 0 10px;
+                        .card-content{
+                            position: relative;
+                            overflow: hidden;
+                            border-radius: 9px;
                             width: 100%;
-                            object-fit: cover;
-                        }
-                        .cusine-name{
-                            position: absolute;
-                            width: 100%;
-                            text-align: center;
-                            z-index: 2;
-                            left: 0;
-                            bottom: 0;
-                            padding: 0 10px 20px;
-                            h4{
-                                font-size: 20px;
-                                color: #fff;
+                            height: 100%;
+                            img{
+                                display: block;
+                                width: 100%;
+                                object-fit: cover;
                             }
-                            h6{
-                                font-size: 12px;
-                                color: #fff;
-                                opacity: .9;
+                            .cusine-name{
+                                position: absolute;
+                                width: 100%;
+                                text-align: center;
+                                z-index: 2;
+                                left: 0;
+                                bottom: 0;
+                                padding: 0 10px 20px;
+                                h4{
+                                    font-size: 20px;
+                                    color: #fff;
+                                }
+                                h6{
+                                    font-size: 12px;
+                                    color: #fff;
+                                    opacity: .9;
+                                }
                             }
-                        }
-                        &::after{
-                            content: " ";
-                            position: absolute;
-                            width: 100%;
-                            height: 50%;
-                            left: 0;
-                            bottom: 0;
-                            background: linear-gradient(180deg,transparent,rgba(0,0,0,.77));
-                            z-index: 1;
+                            &::after{
+                                content: " ";
+                                position: absolute;
+                                width: 100%;
+                                height: 50%;
+                                left: 0;
+                                bottom: 0;
+                                background: linear-gradient(180deg,transparent,rgba(0,0,0,.77));
+                                z-index: 1;
+                            }
                         }
                     }
-                }
-            }        
+                }        
+            }
         }
     }
 }
