--- a/assets/css/scss/includes/_test.scss
+++ b/assets/css/scss/includes/_test.scss
@@ -38,14 +38,17 @@
         .rfq-banner{
             height: 219px;
             border-radius: 10px;
-            background: #fff;
             position: relative;
-            background: url(/assets/img/rfq-img.png);
-            background-repeat: no-repeat;
             background-size: cover;
-            background-position: 50%;
+           img{
+            width: 100%;
+            height: 100%;
+           }
             .banner-caption{
                 padding: 30px 40px;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
                 .tittle{
                     font-size: 24px;
                     font-weight: 600;
@@ -73,6 +76,10 @@
                             border: 1px solid #ec7451;
                             border-radius: 4px;
                             color: #fff;
+                        }
+                        :hover{
+                            background-color: transparent;
+                            color: #ec7451;
                         }
                     }
                 }
